--- a/external.html
+++ b/external.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Savitribai Pune university</h2>
-    <P>Savitribai Phule Pune University is one of the premier Institutes of Higher Learning and Research. It is believed that the Academic flourishes with support of efficient and transparent administration. Student centric education approach will empower the upcoming generations.
-        
-    </P>
+    <h2>WELcome</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.Ex a aperiam fugiat nesciunt totam incidunt non, quis, culpa dolores possimus eaque,
+          tempore debitis accusamus? Itaque laborum ullam rerum soluta libero  consectetur adipisicing elit. Harum fugiat cum voluptas suscipit, illo quis, error facilis consequatur consequunLorem ipsum, dolor sit amettur exercitationem praesentium veniam voluptatibus odit dolore laborum rerum perspiciatis quo magni. consectetur adipisicing elit. Harum fugiat cum voluptas suscipit, illo quis, error facilis consequatur consequunLorem ipsum, dolor sit amettur exercitationem praesentium veniam voluptatibus odit dolore laborum rerum perspiciatis quo magni. consectetur adipisicing elit. Harum fugiat cum voluptas suscipit, illo quis, error facilis consequatur consequunLorem ipsum, dolor sit amettur exercitationem praesentium veniam voluptatibus odit dolore laborum rerum perspiciatis quo magni.</p>
 
 </body>
 </html>
