--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <a href="inline.html">Inline css</a> <br> <br>
     <a href="internal.html">internal css</a><br><br>
     <a href="external.html">external css</a><br><br>
+    <a href="practice.html">practice</a><br><br>
+    <a href="assignment 1.html">assignment 1</a><br><br>
+    <a href="z index.html">z index</a> <br><br>
+    <a href="assignment 2.html">assignment 2</a>
 </body>
 </html>
